# my-emacs-config

./: .emacs  .emacs-rc-cedet.el  .gitignore  .gitmodules  README  custom.el  early-init.el  init.el  init.rest.el  local.el.example
.emacs.d/: .gitignore  emacs.0.el  emacs.1.el  environment.el  init.el
.github/: copilot-instructions.md
.xemacs/: custom.el  init.el
deployment/: bazel-build-log.org  build.emacs.org  configuration.org  emacs-config-ubuntu20.sh  emacs-config-ubuntu24.sh  emacs-pkgs-ubuntu18.txt  emacs-pkgs-ubuntu20.txt  emacs-pkgs-ubuntu24.txt  emacs_current_user_context_menu.reg  launch-emacs-client.vbs  readme.org  snap-ubuntu.md
deployment/bazel/: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE.bzlmod  deploy.sh  deploy_fonts.sh  deploy_fonts_no_bazel.sh  emacs_fetch.bzl  install_emacs.sh  install_emacs_ref.sh  install_fonts.sh  remove.sh  remove_fonts.sh
rc/: emacs.0.el  emacs.1.el  environment.el  kb-secrets.el  my-secrets.el.gpg  rc-adoc-mode.el  rc-alpha.el  rc-anzu.el  rc-auctex.el  rc-auto-complete.el  rc-buffer-move.el  rc-c-mode.el  rc-cc-mode.el  rc-cedet.el  rc-clean-aindent-mode.el  rc-clearcase.el  rc-cmake-mode.el  rc-color-theme.el  rc-column-marker.el  rc-company.el  rc-cua.el  rc-date-time.el  rc-diff-mode.el  rc-diff.el  rc-docker.el  rc-doxymacs.el  rc-dtrt-indent.el  rc-duplicate-thing.el  rc-ecb.el  rc-elpa.el  rc-fill-column-indicator.el  rc-flymake-gradle.el  rc-flymake.el  rc-folding.el  rc-functions.el  rc-gdb.el  rc-ggtags.el  rc-git.el  rc-global.el  rc-google-c-style.el  (+34 more)
rc/snippets/c++-mode/: modeline
rc/snippets/c-mode/: ncp_args  ncp_entry  ncp_exit  ncp_ptr  ncp_resource_name  ncp_tracepoint
rc/snippets/cc-mode/: modeline
rc/snippets/makefile-mode/: modeline
rc/snippets/org-mode/: beamer
site-lisp/: .gitignore  cmake-mode.el  highlight-regexp.el  json-pretty-print-array.el  mason.el  ogonki.el  what-env.el
site-lisp/asciidoc-mode/: asciidoc-mode.el
site-lisp/cedet-1.0pre6/cogre/: cogre-loaddefs.el  cogre.info  wisent-dot-wy.el
site-lisp/cedet-1.0pre6/common/: cedet-loaddefs.el  cedet.info
site-lisp/cedet-1.0pre6/contrib/: contrib-loaddefs.el  wisent-csharp-wy.el  wisent-php-wy.el  wisent-ruby-wy.el
site-lisp/cedet-1.0pre6/ede/: ede-loaddefs.el  ede.info
site-lisp/cedet-1.0pre6/eieio/: eieio-loaddefs.el  eieio.info
site-lisp/cedet-1.0pre6/semantic/: semantic-grammar-wy.el  semantic-loaddefs.el
site-lisp/cedet-1.0pre6/semantic/bovine/: semantic-c-by.el  semantic-erlang-by.el  semantic-make-by.el  semantic-scm-by.el
site-lisp/cedet-1.0pre6/semantic/doc/: grammar-fw.info  semantic-appdev.info  semantic-langdev.info  semantic-user.info  semantic.info  wisent.info
site-lisp/cedet-1.0pre6/semantic/wisent/: wisent-awk-wy.el  wisent-calc-wy.el  wisent-cim-wy.el  wisent-java-tags-wy.el  wisent-java-wy.el  wisent-javascript-jv-wy.el  wisent-python-wy.el
site-lisp/cedet-1.0pre6/speedbar/: speedbar-loaddefs.el  speedbar.info
site-lisp/cedet-1.0pre6/srecode/: srecode-loaddefs.el  srecode-template-wy.el  srecode.info
site-lisp/color-theme-library/: color-theme.el
site-lisp/doxymacs/: doxymacs.el
site-lisp/folding/: folding.el
site-lisp/json-pretty-print-array/: json-pretty-print-array-test.el  json-pretty-print-array.el
site-lisp/linum/emacs21/: linum.el
site-lisp/magit/: magit-bisect.elc  magit-key-mode.elc  magit-stgit.elc  magit-svn.elc  magit-topgit.elc  magit.el  magit.elc
site-lisp/nxhtml/: nxhtml-loaddefs.el
site-lisp/nxhtml/etc/schema/: xhtml-loader.rnc
site-lisp/org-addons/: org-ascii.el  org-asciidoc.asciidoc  org-asciidoc.el  org-mediawiki.el  org-mw.el
site-lisp/pf-mode/: pf-mode.el
site-lisp/psvn/: psvn.el
site-lisp/url/: .gitignore
site-lisp/url/CVS/: Entries  Repository  Root
