"""
BUILD.bazel — Emacs source build orchestration via Bazel genrules.

Targets
-------
  //:emacs_package      Build Emacs 30.2 (stable tarball) → emacs-30.2-install.tar.xz
  //:emacs_ref_package  Build any git ref/commit via EMACS_REF env var (default: master)
  //:deploy             Install stable build into $HOME/.local/
  //:deploy_ref         Install ref build into $HOME/.local/

Examples
--------
  # Stable build (pinned, cached by SHA256)
  bazel build //:emacs_package

  # Build from git master (EMACS_REF defaults to master)
  EMACS_REF=master bazel build //:emacs_ref_package

  # Build a specific release branch
  EMACS_REF=emacs-30 bazel build //:emacs_ref_package

  # Build a specific tag
  EMACS_REF=emacs-30.2 bazel build //:emacs_ref_package

  # Build a specific commit SHA (triggers full clone, not shallow)
  EMACS_REF=a1b2c3d4e5f6 bazel build //:emacs_ref_package

  # Deploy ref build to ~/.local/
  EMACS_REF=emacs-30 bazel run //:deploy_ref

Caching
-------
  Stable (//:emacs_package): fully cached by Bazel (SHA256-pinned tarball input).
  Ref    (//:emacs_ref_package): cached per EMACS_REF value, tracked via
         --action_env=EMACS_REF in .bazelrc. Changing EMACS_REF busts the cache.
         Note: for mutable refs (master, emacs-30) the cache may be stale;
         use `bazel build --action_env=EMACS_REF_FORCE=$(date +%s)` to force rebuild.
"""

# ---------------------------------------------------------------------------
# Common configure flags
# ---------------------------------------------------------------------------

CONFIGURE_FLAGS = " ".join([
    "--with-pgtk",
    "--with-native-compilation=aot",
    "--with-tree-sitter",
    "--with-modules",
    "--with-sqlite3",
    "--with-harfbuzz",
    "--with-compress-install",
    "--with-threads",
    "--with-rsvg",
    "--with-jpeg",
    "--with-png",
    "--with-gif",
    "--with-tiff",
    "--with-xpm",
    "--with-gnutls",
    "--with-dbus",
    "--with-mailutils",
])

GIT_URL = "https://git.savannah.gnu.org/git/emacs.git"

# ---------------------------------------------------------------------------
# Stable build (Emacs 30.2 tarball via @emacs_src — reproducible)
# ---------------------------------------------------------------------------

genrule(
    name = "emacs_package",
    srcs = [
        "@emacs_src//:all",
        "@emacs_src//:configure",
    ],
    outs = ["emacs-30.2-install.tar.xz"],
    cmd = """
        set -euo pipefail

        # Capture absolute output path before any cd (Bazel's $@ is execroot-relative).
        OUTPUT_ABS="$$PWD/$@"

        # Establish the real home dir — genrule env strips $$HOME.
        REAL_HOME="/home/$$(whoami)"
        PREFIX="$$REAL_HOME/.local"

        # Locate the source root via the single exported 'configure' file path.
        # This avoids embedding all source paths ($$(locations :all) = 444KB).
        CONFIGURE_PATH="$(location @emacs_src//:configure)"
        SRC_ROOT="$$(realpath $$(dirname "$$CONFIGURE_PATH"))"

        WORK=$$(mktemp -d)
        STAGING_DIR="$$WORK/staging"
        BUILD_DIR="$$WORK/build"
        mkdir -p "$$STAGING_DIR" "$$BUILD_DIR"

        cp -a "$$SRC_ROOT/." "$$BUILD_DIR/"
        cd "$$BUILD_DIR"

        # libgccjit has no pkg-config file; it lives under the GCC lib dir.
        # Detect the active GCC version and expose headers + .so to configure.
        GCC_VER=$$(/usr/bin/gcc -dumpversion | cut -d. -f1)
        GCC_LIBDIR="/usr/lib/gcc/x86_64-linux-gnu/$${GCC_VER}"
        export CPPFLAGS="-I$${GCC_LIBDIR}/include"
        export LDFLAGS="-L$${GCC_LIBDIR} -Wl,-rpath,$${GCC_LIBDIR}"

        # Compiler: EMACS_CC env var (set via --action_env=EMACS_CC or deploy.sh --cc).
        # Defaults to clang; pass EMACS_CC=gcc to build with GCC instead.
        CC="$${EMACS_CC:-clang}"

        [[ -x ./autogen.sh ]] && ./autogen.sh
        CC="$$CC" ./configure --prefix="$$PREFIX" """ + CONFIGURE_FLAGS + """
        make -j$$(nproc --ignore=2)
        # DESTDIR stages files under staging/<prefix>; internal paths still say <prefix>.
        make install DESTDIR="$$STAGING_DIR"

        tar -cJf "$$OUTPUT_ABS" -C "$$STAGING_DIR$$PREFIX" .
        rm -rf "$$WORK"
    """,
    # local = True: disable sandbox so system libraries are reachable.
    local = True,
)

# ---------------------------------------------------------------------------
# Ref build — any branch, tag, or commit SHA via EMACS_REF env var.
# Tracked by --action_env=EMACS_REF in .bazelrc (different values = different
# cache entries). EMACS_REF defaults to "master" when unset.
# ---------------------------------------------------------------------------

genrule(
    name = "emacs_ref_package",
    srcs = [],
    outs = ["emacs-ref-install.tar.xz"],
    cmd = """
        set -euo pipefail

        # Capture absolute output path before any cd (Bazel's $@ is execroot-relative).
        OUTPUT_ABS="$$PWD/$@"

        # Establish the real home dir — genrule env strips $$HOME.
        REAL_HOME="/home/$$(whoami)"
        PREFIX="$$REAL_HOME/.local"

        REF="$${EMACS_REF:-master}"
        GIT_URL=""" + '"' + GIT_URL + '"' + """

        WORK=$$(mktemp -d)
        STAGING_DIR="$$WORK/staging"
        BUILD_DIR="$$WORK/build"
        mkdir -p "$$STAGING_DIR"

        # Detect whether REF is a commit SHA (hex-only, 7-40 chars).
        # SHAs cannot be shallow-cloned from Savannah, so we use a partial
        # (blobless) clone instead.
        if [[ "$$REF" =~ ^[0-9a-fA-F]{7,40}$$ ]]; then
            echo "==> Fetching commit $$REF (blobless clone)"
            git clone --filter=blob:none "$$GIT_URL" "$$BUILD_DIR"
            git -C "$$BUILD_DIR" checkout "$$REF"
        else
            echo "==> Cloning ref '$$REF' (shallow)"
            git clone --depth 1 --branch "$$REF" "$$GIT_URL" "$$BUILD_DIR"
        fi

        cd "$$BUILD_DIR"
        ./autogen.sh
        GCC_VER=$$(/usr/bin/gcc -dumpversion | cut -d. -f1)
        GCC_LIBDIR="/usr/lib/gcc/x86_64-linux-gnu/$${GCC_VER}"
        export CPPFLAGS="-I$${GCC_LIBDIR}/include"
        export LDFLAGS="-L$${GCC_LIBDIR} -Wl,-rpath,$${GCC_LIBDIR}"
        CC="$${EMACS_CC:-clang}"
        CC="$$CC" ./configure --prefix="$$PREFIX" """ + CONFIGURE_FLAGS + """
        make -j$$(nproc --ignore=2)
        make install DESTDIR="$$STAGING_DIR"

        tar -cJf "$$OUTPUT_ABS" -C "$$STAGING_DIR$$PREFIX" .
        rm -rf "$$WORK"
    """,
    local = True,
)

# ---------------------------------------------------------------------------
# Deploy targets
#
# Bazel 9 removed sh_binary from the built-in rule set (it now lives in
# rules_shell). Rather than add that dependency, deployment is handled by
# deploy.sh in this directory, which builds the appropriate target and
# extracts the resulting tarball into ~/.local/.
#
# Usage:
#   ./deploy.sh              # stable 30.2
#   ./deploy.sh --ref REF    # any git ref / commit SHA
# ---------------------------------------------------------------------------
