"""
BUILD.bazel — Emacs source build orchestration via Bazel genrules.

Targets
-------
  //:emacs_package      Build Emacs 30.2 (stable tarball) → emacs-30.2-install.tar.xz
  //:emacs_ref_package  Build any git ref/commit via EMACS_REF env var (default: master)
  //:fonts              Bundle programming fonts → fonts.tar.gz

  bazel run targets (build artifact + install/remove side effects):
  //:install            Install stable Emacs 30.2 into ~/.local/
  //:install_ref        Install ref/commit build (set EMACS_REF env var first)
  //:install_fonts      Install fonts into ~/.local/share/fonts/emacs/
  //:remove             Uninstall Emacs from ~/.local/
  //:remove_fonts       Uninstall fonts from ~/.local/share/fonts/emacs/

GUI Toolkit (EMACS_TOOLKIT, default: auto-detect)
-------------------------------------------
  Auto-detection (when EMACS_TOOLKIT is unset):
    Wayland session (XDG_SESSION_TYPE=wayland or WAYLAND_DISPLAY set) → pgtk
    X11 session                                                        → lucid

  lucid   Lucid (Athena/Xaw) toolkit — stable, X11 only
            deps: libxaw7-dev libxt-dev
  pgtk    Pure GTK3 — native Wayland client + X11 via GTK backend
            deps: libgtk-3-dev
            warning: running under X11 triggers an Emacs warning about
            unsupported configuration, crashes on large selections, and
            keyboard input problems.  Only use in a native Wayland session.
  gtk3    GTK3 with X11 — Wayland only via XWayland
            deps: libgtk-3-dev

Examples
--------
  # Stable build + install (one step)
  bazel run //:install

  # Stable build with pgtk toolkit
  EMACS_TOOLKIT=pgtk bazel build //:emacs_package

  # Ref build + install
  EMACS_REF=emacs-30.2 bazel run //:install_ref

  # Ref build with pgtk toolkit
  EMACS_REF=emacs-30.2 EMACS_TOOLKIT=pgtk bazel run //:install_ref

  # Fonts: install / remove
  bazel run //:install_fonts
  bazel run //:remove_fonts

  # Emacs: remove
  bazel run //:remove

  # Build only (no install)
  bazel build //:emacs_package
  EMACS_REF=master bazel build //:emacs_ref_package

Caching
-------
  Stable (//:emacs_package): fully cached by Bazel (SHA256-pinned tarball input).
  Ref    (//:emacs_ref_package): cached per EMACS_REF value, tracked via
         --action_env=EMACS_REF in .bazelrc. Changing EMACS_REF busts the cache.
         Note: for mutable refs (master, emacs-30) the cache may be stale;
         use `bazel build --action_env=EMACS_REF_FORCE=$(date +%s)` to force rebuild.
  Toolkit: EMACS_TOOLKIT is tracked via --action_env=EMACS_TOOLKIT in .bazelrc,
         so lucid and pgtk builds are cached independently.
"""

load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

# ---------------------------------------------------------------------------
# Common configure flags
# ---------------------------------------------------------------------------

CONFIGURE_FLAGS = " ".join([
    "--with-native-compilation=aot",
    "--with-tree-sitter",
    "--with-modules",
    "--with-sqlite3",
    "--with-harfbuzz",
    "--with-compress-install",
    "--with-threads",
    "--with-rsvg",
    "--with-jpeg",
    "--with-png",
    "--with-gif",
    "--with-tiff",
    "--with-xpm",
    "--with-gnutls",
    "--with-dbus",
    "--with-mailutils",
])

GIT_URL = "https://git.savannah.gnu.org/git/emacs.git"

# Shell fragment shared by both Emacs genrules: unpacks the libtree-sitter
# staging tarball and exports the env vars that point configure at it.
_TREE_SITTER_SETUP = """
        # Unpack the libtree-sitter staging tarball built by //:libtree_sitter.
        # $$LIBTREE_SITTER_TAR must be set to an absolute path before any cd.
        TS_STAGING=$$(mktemp -d)
        tar -xf "$$LIBTREE_SITTER_TAR" -C "$$TS_STAGING"
        export PKG_CONFIG_PATH="$$TS_STAGING/lib/pkgconfig$${PKG_CONFIG_PATH:+:$$PKG_CONFIG_PATH}"
        export LIBRARY_PATH="$$TS_STAGING/lib$${LIBRARY_PATH:+:$$LIBRARY_PATH}"
        export LD_LIBRARY_PATH="$$TS_STAGING/lib$${LD_LIBRARY_PATH:+:$$LD_LIBRARY_PATH}"
        export LDFLAGS="$$LDFLAGS -L$$TS_STAGING/lib -Wl,-rpath,$$REAL_HOME/.local/lib"
        # Prepend staged headers so they shadow any system libtree-sitter-dev
        # (e.g. Ubuntu 24.04's stale 0.20.8 at /usr/include/tree_sitter/api.h).
        export CPPFLAGS="-I$$TS_STAGING/include $${CPPFLAGS:-}"
"""

# ---------------------------------------------------------------------------
# libtree-sitter (built from source for ABI-15 support)
# Produces a staging tree under lib/ and include/ in the output directory,
# consumed by the Emacs genrules via TREE_SITTER_STAGING.
# ---------------------------------------------------------------------------

genrule(
    name = "libtree_sitter",
    srcs = ["@libtree_sitter_src//:all"],
    outs = ["libtree-sitter-staging.tar"],
    cmd = """
        set -euo pipefail
        OUTPUT_ABS="$$PWD/$@"

        # Locate the source root from any known file in the archive.
        SRC=$$(dirname $$(echo $(locations @libtree_sitter_src//:all) | tr ' ' '\\n' | grep 'Makefile$$' | head -1))

        STAGING=$$(mktemp -d)
        trap 'rm -rf "$$STAGING"' EXIT

        # tree-sitter's Makefile honours PREFIX for installation.
        make -C "$$SRC" -j$$(nproc --ignore=2)
        make -C "$$SRC" PREFIX="$$STAGING" install

        tar -cf "$$OUTPUT_ABS" -C "$$STAGING" .
    """,
    local = True,
)

# ---------------------------------------------------------------------------
# Stable build (Emacs 30.2 tarball via @emacs_src — reproducible)
# ---------------------------------------------------------------------------

genrule(
    name = "emacs_package",
    srcs = [
        "@emacs_src//:all",
        "@emacs_src//:configure",
        "//:libtree_sitter",
    ],
    outs = ["emacs-30.2-install.tar.xz"],
    cmd = """
        set -euo pipefail

        # Capture absolute output path before any cd (Bazel's $@ is execroot-relative).
        OUTPUT_ABS="$$PWD/$@"

        # Establish the real home dir — genrule env strips $$HOME.
        REAL_HOME="/home/$$(whoami)"
        PREFIX="$$REAL_HOME/.local"

        # Locate the source root via the single exported 'configure' file path.
        # This avoids embedding all source paths ($$(locations :all) = 444KB).
        CONFIGURE_PATH="$(location @emacs_src//:configure)"
        SRC_ROOT="$$(realpath $$(dirname "$$CONFIGURE_PATH"))"

        WORK=$$(mktemp -d)
        STAGING_DIR="$$WORK/staging"
        BUILD_DIR="$$WORK/build"
        mkdir -p "$$STAGING_DIR" "$$BUILD_DIR"

        cp -a "$$SRC_ROOT/." "$$BUILD_DIR/"

        # Capture absolute path to the libtree-sitter tarball before cd.
        LIBTREE_SITTER_TAR="$$PWD/$(location //:libtree_sitter)"

        cd "$$BUILD_DIR"

        # libgccjit has no pkg-config file; it lives under the GCC lib dir.
        # Locate it by finding libgccjit.h directly — this is independent of
        # whichever gcc version /usr/bin/gcc points to, so libgccjit-13-dev
        # is found correctly even when the default gcc is an older version.
        GCC_LIBDIR=$$(dirname "$$(find /usr/lib/gcc/x86_64-linux-gnu -name libgccjit.h 2>/dev/null | sort -V | tail -1)")
        if [[ -z "$$GCC_LIBDIR" || "$$GCC_LIBDIR" == "." ]]; then
            echo "ERROR: libgccjit.h not found — install libgccjit-XX-dev" >&2
            exit 1
        fi
        export CPPFLAGS="-I$${GCC_LIBDIR}"
        export LDFLAGS="-L$$(dirname $$GCC_LIBDIR) -Wl,-rpath,$$(dirname $$GCC_LIBDIR)"
""" + _TREE_SITTER_SETUP + """
        # Compiler: EMACS_CC env var (set via --action_env=EMACS_CC or deploy.sh --cc).
        # Defaults to clang; pass EMACS_CC=gcc to build with GCC instead.
        CC="$${EMACS_CC:-clang}"

        # Toolkit selection (EMACS_TOOLKIT env var, tracked via --action_env in .bazelrc).
        # When unset, auto-detects from XDG_SESSION_TYPE / WAYLAND_DISPLAY:
        #   Wayland session → pgtk   (native Wayland client via GTK backend)
        #   X11 session     → lucid  (stable Athena/Xaw toolkit, default)
        # Override: EMACS_TOOLKIT=lucid|pgtk|gtk3 bazel build //:emacs_package
        if [[ -n "$${EMACS_TOOLKIT:-}" ]]; then
            EFFECTIVE_TOOLKIT="$$EMACS_TOOLKIT"
        elif [[ "$${XDG_SESSION_TYPE:-}" == "wayland" ]] || [[ -n "$${WAYLAND_DISPLAY:-}" ]]; then
            EFFECTIVE_TOOLKIT="pgtk"
            echo "==> Auto-detected Wayland session → toolkit: pgtk"
        else
            EFFECTIVE_TOOLKIT="lucid"
            echo "==> Auto-detected X11 session → toolkit: lucid"
        fi
        case "$$EFFECTIVE_TOOLKIT" in
          lucid) TOOLKIT_FLAG="--with-x-toolkit=lucid" ;;
          pgtk)  TOOLKIT_FLAG="--with-pgtk" ;;
          gtk3)  TOOLKIT_FLAG="--with-x-toolkit=gtk3" ;;
          *) echo "ERROR: Unknown EMACS_TOOLKIT '$$EFFECTIVE_TOOLKIT'. Valid values: lucid, pgtk, gtk3" >&2; exit 1 ;;
        esac

        [[ -x ./autogen.sh ]] && ./autogen.sh
        CC="$$CC" ./configure --prefix="$$PREFIX" $$TOOLKIT_FLAG """ + CONFIGURE_FLAGS + """
        make -j$$(nproc --ignore=2)
        # DESTDIR stages files under staging/<prefix>; internal paths still say <prefix>.
        make install DESTDIR="$$STAGING_DIR"

        # Bundle libtree-sitter .so files into the tarball so the rpath
        # ($$HOME/.local/lib) is satisfied at runtime without a system install.
        mkdir -p "$$STAGING_DIR$$PREFIX/lib"
        cp -a "$$TS_STAGING/lib"/libtree-sitter.so* "$$STAGING_DIR$$PREFIX/lib/"

        tar -cJf "$$OUTPUT_ABS" -C "$$STAGING_DIR$$PREFIX" .
        rm -rf "$$WORK"
    """,
    # local = True: disable sandbox so system libraries are reachable.
    local = True,
)

# ---------------------------------------------------------------------------
# Ref build — any branch, tag, or commit SHA via EMACS_REF env var.
# Tracked by --action_env=EMACS_REF in .bazelrc (different values = different
# cache entries). EMACS_REF defaults to "master" when unset.
# ---------------------------------------------------------------------------

genrule(
    name = "emacs_ref_package",
    srcs = ["//:libtree_sitter"],
    outs = ["emacs-ref-install.tar.xz"],
    cmd = """
        set -euo pipefail

        # Capture absolute output path before any cd (Bazel's $@ is execroot-relative).
        OUTPUT_ABS="$$PWD/$@"

        # Establish the real home dir — genrule env strips $$HOME.
        REAL_HOME="/home/$$(whoami)"
        PREFIX="$$REAL_HOME/.local"

        REF="$${EMACS_REF:-master}"
        GIT_URL=""" + '"' + GIT_URL + '"' + """

        WORK=$$(mktemp -d)
        STAGING_DIR="$$WORK/staging"
        BUILD_DIR="$$WORK/build"
        mkdir -p "$$STAGING_DIR"

        # Detect whether REF is a commit SHA (hex-only, 7-40 chars).
        # SHAs cannot be shallow-cloned from Savannah, so we use a partial
        # (blobless) clone instead.
        if [[ "$$REF" =~ ^[0-9a-fA-F]{7,40}$$ ]]; then
            echo "==> Fetching commit $$REF (blobless clone)"
            git clone --filter=blob:none "$$GIT_URL" "$$BUILD_DIR"
            git -C "$$BUILD_DIR" checkout "$$REF"
        else
            echo "==> Cloning ref '$$REF' (shallow)"
            git clone --depth 1 --branch "$$REF" "$$GIT_URL" "$$BUILD_DIR"
        fi

        # Capture absolute path to the libtree-sitter tarball before cd.
        LIBTREE_SITTER_TAR="$$PWD/$(location //:libtree_sitter)"

        cd "$$BUILD_DIR"
        ./autogen.sh
        GCC_LIBDIR=$$(dirname "$$(find /usr/lib/gcc/x86_64-linux-gnu -name libgccjit.h 2>/dev/null | sort -V | tail -1)")
        if [[ -z "$$GCC_LIBDIR" || "$$GCC_LIBDIR" == "." ]]; then
            echo "ERROR: libgccjit.h not found — install libgccjit-XX-dev" >&2
            exit 1
        fi
        export CPPFLAGS="-I$${GCC_LIBDIR}"
        export LDFLAGS="-L$$(dirname $$GCC_LIBDIR) -Wl,-rpath,$$(dirname $$GCC_LIBDIR)"
""" + _TREE_SITTER_SETUP + """
        CC="$${EMACS_CC:-clang}"
        if [[ -n "$${EMACS_TOOLKIT:-}" ]]; then
            EFFECTIVE_TOOLKIT="$$EMACS_TOOLKIT"
        elif [[ "$${XDG_SESSION_TYPE:-}" == "wayland" ]] || [[ -n "$${WAYLAND_DISPLAY:-}" ]]; then
            EFFECTIVE_TOOLKIT="pgtk"
            echo "==> Auto-detected Wayland session → toolkit: pgtk"
        else
            EFFECTIVE_TOOLKIT="lucid"
            echo "==> Auto-detected X11 session → toolkit: lucid"
        fi
        case "$$EFFECTIVE_TOOLKIT" in
          lucid) TOOLKIT_FLAG="--with-x-toolkit=lucid" ;;
          pgtk)  TOOLKIT_FLAG="--with-pgtk" ;;
          gtk3)  TOOLKIT_FLAG="--with-x-toolkit=gtk3" ;;
          *) echo "ERROR: Unknown EMACS_TOOLKIT '$$EFFECTIVE_TOOLKIT'. Valid values: lucid, pgtk, gtk3" >&2; exit 1 ;;
        esac
        CC="$$CC" ./configure --prefix="$$PREFIX" $$TOOLKIT_FLAG """ + CONFIGURE_FLAGS + """
        make -j$$(nproc --ignore=2)
        make install DESTDIR="$$STAGING_DIR"

        # Bundle libtree-sitter .so files into the tarball so the rpath
        # ($$HOME/.local/lib) is satisfied at runtime without a system install.
        mkdir -p "$$STAGING_DIR$$PREFIX/lib"
        cp -a "$$TS_STAGING/lib"/libtree-sitter.so* "$$STAGING_DIR$$PREFIX/lib/"

        tar -cJf "$$OUTPUT_ABS" -C "$$STAGING_DIR$$PREFIX" .
        rm -rf "$$WORK"
    """,
    local = True,
)

# ---------------------------------------------------------------------------
# Deploy targets
#
# Bazel 9 removed sh_binary from the built-in rule set (it now lives in
# rules_shell). Rather than add that dependency, deployment is handled by
# deploy.sh in this directory, which builds the appropriate target and
# extracts the resulting tarball into ~/.local/.
#
# Usage:
#   ./deploy.sh              # stable 30.2
#   ./deploy.sh --ref REF    # any git ref / commit SHA
# ---------------------------------------------------------------------------

# ---------------------------------------------------------------------------
# Fonts target
#
# Downloads programming fonts via Bazel (JetBrains Mono, Fira Code,
# Noto Sans Mono) and bundles them into fonts.tar.gz.
#
# Usage:
#   bazel --nohome_rc build //:fonts
#   ./deploy_fonts.sh    # build + install to ~/.local/share/fonts/emacs/
# ---------------------------------------------------------------------------

genrule(
    name = "fonts",
    srcs = [
        "@font_jetbrains_mono//:ttf_files",
        "@font_fira_code//:ttf_files",
        "@font_noto_sans_mono_regular//file",
        "@font_noto_sans_mono_bold//file",
    ],
    outs = ["fonts.tar.gz"],
    cmd = """
        set -euo pipefail
        OUTPUT_ABS="$$PWD/$@"
        STAGING="$$(mktemp -d)"
        trap 'rm -rf "$$STAGING"' EXIT

        # $(SRCS) expands to all source file paths (execroot-relative).
        # Copy each font into the flat staging directory.
        for f in $(SRCS); do
            cp "$$f" "$$STAGING/$$(basename $$f)"
        done

        tar -czf "$$OUTPUT_ABS" -C "$$STAGING" .
    """,
)

# ---------------------------------------------------------------------------
# bazel run targets — install / remove
#
# Each sh_binary declares the relevant build artifact as a data dependency
# so Bazel builds it automatically before running the installer script.
# The script locates the artifact via the $RUNFILES_DIR mechanism.
#
# Usage:
#   bazel run //:install                              # stable Emacs 30.2
#   EMACS_REF=emacs-30.2 bazel run //:install_ref   # any git ref
#   bazel run //:install_fonts
#   bazel run //:remove                              # Emacs 30.2
#   bazel run //:remove_fonts
# ---------------------------------------------------------------------------

sh_binary(
    name = "install",
    srcs = ["install_emacs.sh"],
    data = ["//:emacs_package"],
)

sh_binary(
    name = "install_ref",
    srcs = ["install_emacs_ref.sh"],
    data = ["//:emacs_ref_package"],
)

sh_binary(
    name = "install_fonts",
    srcs = ["install_fonts.sh"],
    data = ["//:fonts"],
)

sh_binary(
    name = "remove",
    srcs = ["remove.sh"],
)

sh_binary(
    name = "remove_fonts",
    srcs = ["remove_fonts.sh"],
)

