"""
Bazel build for GNU Emacs.

Targets:
  //:emacs_package     — build Emacs 30.2 from the official tarball (reproducible)
  //:emacs_ref_package — build any git ref/commit via EMACS_REF env var

Prerequisites (install system packages first):
  sudo apt install $(grep -v '^#' ../emacs-pkgs-ubuntu24.txt | tr '\n' ' ')

Usage:
  bazel --nohome_rc build //:emacs_package
  EMACS_REF=emacs-30.2 bazel --nohome_rc build //:emacs_ref_package
  ./deploy.sh               # build stable + deploy to ~/.local/
  ./deploy.sh --ref emacs-30.2
"""

module(
    name = "emacs-build",
    version = "0.1.0",
)

# Fetch Emacs source archives via our custom module extension.
emacs_sources = use_extension("//:emacs_fetch.bzl", "emacs_sources")
emacs_sources.stable(
    sha256 = "b3f36f18a6dd2715713370166257de2fae01f9d38cfe878ced9b1e6ded5befd9",
    strip_prefix = "emacs-30.2",
    url = "https://ftp.gnu.org/gnu/emacs/emacs-30.2.tar.xz",
    version = "30.2",
)
use_repo(emacs_sources, "emacs_src")
